# EfaSi

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  mix9nnue_test.cpp
eval/: evaluator.h  mix9nnue.cpp  mix9nnue.h  platform.h  simdops.h  utils.h  weightloader.h
game/: game.cpp  game.h
python/: line_encoding.py  mix9net.py  mix9net_export.py
search/: mcts.cpp  mcts.h  node.cpp  node.h  nodetable.h  parameter.h  pos.h  types.h  utils.cpp  utils.h
